--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
               <div class="col-md-2">
                 <h6 class="text-uppercase font-weight-bold">
-                  <a href="#!" class="text-white underline">INICIO</a>
+                  <a href="#" class="text-white underline">INICIO</a>
                 </h6>
               </div>
 
@@ -184,7 +184,7 @@
                     </svg>
               </i>
             </a>
-            
+
             <a href="https://twitter.com/?lang=es" class="text-white">
               <i class="fab fa-twitter">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
