correcciones de titulos

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     <section class="seccionUltima py-5">
         <div class="container text-justify">
             <div class="row">
+              <h3 class="text-justify">Limite de la Tierra</h3>
                 <div class="col-md-4">
-                    <h1>Limite de la Tierra</h1>
                     <p>Los expertos han sugerido que el límite real entre la Tierra y el espacio se encuentra desde apenas 30 km 
                     sobre la superficie hasta más de 1,6 millones de km de distancia. Sin embargo, la mayoría ha aceptado delimitarlo en nuestra definición actual de la línea de Kármán que se basa en la realidad física, 
                     en el sentido de que marca aproximadamente la altitud a la que los aviones tradicionales ya no pueden volar con eficacia.</p>
@@ -109,7 +109,7 @@
                 <div class="col-md-4" >
                     <div class="fotoTierra">
                         <div data-aos="zoom-in-up">
-                            <img src="Imagenes/atmosphere.jpg" alt="El espacio" width="450px" height="300px">
+                            <img src="Imagenes/atmosphere.jpg" alt="El espacio" width="420px" height="300px">
                         </div>
                     </div>
                 </div>
