--- a/index.html
+++ b/index.html
@@ -97,13 +97,15 @@
                 <div class="col-md-4">
                     <p>Los expertos han sugerido que el límite real entre la Tierra y el espacio se encuentra desde apenas 30 km 
                     sobre la superficie hasta más de 1,6 millones de km de distancia. Sin embargo, la mayoría ha aceptado delimitarlo en nuestra definición actual de la línea de Kármán que se basa en la realidad física, 
-                    en el sentido de que marca aproximadamente la altitud a la que los aviones tradicionales ya no pueden volar con eficacia.</p>
+                    en el sentido de que marca aproximadamente la altitud a la que los aviones tradicionales ya no pueden volar con eficacia.
+                    Cualquier cosa que viaje por encima de este límite necesita un sistema de propulsión que no dependa de la sustentación generada por la atmósfera de la Tierra. 
+                  </p>
                 </div>
                 <div class="col-md-4">
-                    <p> Cualquier cosa que viaje por encima de este límite necesita un sistema de propulsión que no dependa de la sustentación generada por la atmósfera de la Tierra. 
-                    En otras palabras, la línea Kármán es donde cambian las leyes físicas que rigen la capacidad para volar de una nave. “Este es ciertamente un límite físico, donde termina la aerodinámica y comienza la astronáutica, 
+                    <p> En otras palabras, la línea Kármán es donde cambian las leyes físicas que rigen la capacidad para volar de una nave. “Este es ciertamente un límite físico, donde termina la aerodinámica y comienza la astronáutica, 
                     así que pensé, ¿por qué no debería ser también un límite jurisdiccional?... Debajo de esta línea, el espacio pertenece a cada país.
-                    Por encima de este nivel, habría espacio libre”, escribió en su autobiografía el propio von Kármán</p>
+                    Por encima de este nivel, habría espacio libre”, escribió en su autobiografía el propio von Kármán.
+                  </p>
                 </div>
             
                 <div class="col-md-4" >
