agregacion de animaciones

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Space Wonders</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
@@ -60,6 +61,7 @@
                     </div>
                 </div>
                 <div class="col-md-6">
+                  <div data-aos="fade-up" data-aos-duration="1000">
                     <div class="content text-justify">
                         <h2>¿Qué es el espacio?</h2>
                         <p>En el espacio, nadie puede escucharte gritar. Esto es así porque en el espacio no hay aire: es un vacío. Las ondas de sonido no pueden viajar a través del vacío.</p>
@@ -68,12 +70,15 @@
                         <p>Por lo general, se piensa que el espacio está completamente vacío, pero eso no es verdad. Los vastos trechos entre las estrellas y los planetas están llenos de enormes cantidades de gas y polvo, diseminados de manera casi imperceptible. 
                         Incluso las partes más vacías del espacio contienen al menos unos cuantos cientos de átomos o moléculas por metro cúbico.</p>
                     </div>
+                  </div>
                 </div>
             </div>
             <div class="content-fluid text-justify">
-            <p>El espacio también está lleno de varias formas de radiación peligrosa para los astronautas. Gran parte de esta radiación infrarroja y ultravioleta proviene del Sol. Desde distantes sistemas estelares llegan rayos X, 
-                rayos gamma y rayos cósmicos (partículas que viajan a una velocidad cercana a la de la luz) que poseen mucha energía.</p>
+              <div data-aos="fade-up" data-aos-duration="1000">
+                  <p>El espacio también está lleno de varias formas de radiación peligrosa para los astronautas. Gran parte de esta radiación infrarroja y ultravioleta proviene del Sol. Desde distantes sistemas estelares llegan rayos X, 
+                  rayos gamma y rayos cósmicos (partículas que viajan a una velocidad cercana a la de la luz) que poseen mucha energía.</p>
             </div>
+          </div>
         </div>
     </section>
 
@@ -81,10 +86,12 @@
 
     <section class="SeccionMedio p-4">
         <div class="container text-justify">
+          <div data-aos="fade-up" data-aos-duration="1000">
             <h2>La vía láctea</h2>
             <p>La Vía Láctea es nuestro hogar en el universo. Es una espiral bastante típica con cuatro brazos principales en su disco formada por varios cientos de miles de millones de estrellas;
             una de ellas, es el Sol.Comprender la Vía Láctea es crucial para estudiar la evolución galáctica, 
             la formación de estrellas y sistemas planetarios, y la distribución de materia y energía en el universo.</p>
+          </div>
         </div>
     </section>
 
@@ -93,19 +100,25 @@
     <section class="seccionUltima py-5">
         <div class="container text-justify">
             <div class="row">
-              <h3 class="text-justify">Limite de la Tierra</h3>
+              <div data-aos="zoom-in" data-aos-duration="1000">
+                <h3 class="text-justify">Limite de la Tierra</h3>
+              </div>
                 <div class="col-md-4">
-                    <p>Los expertos han sugerido que el límite real entre la Tierra y el espacio se encuentra desde apenas 30 km 
-                    sobre la superficie hasta más de 1,6 millones de km de distancia. Sin embargo, la mayoría ha aceptado delimitarlo en nuestra definición actual de la línea de Kármán que se basa en la realidad física, 
-                    en el sentido de que marca aproximadamente la altitud a la que los aviones tradicionales ya no pueden volar con eficacia.
-                    Cualquier cosa que viaje por encima de este límite necesita un sistema de propulsión que no dependa de la sustentación generada por la atmósfera de la Tierra. 
-                  </p>
+                  <div data-aos="zoom-in" data-aos-duration="1000">
+                      <p>Los expertos han sugerido que el límite real entre la Tierra y el espacio se encuentra desde apenas 30 km 
+                      sobre la superficie hasta más de 1,6 millones de km de distancia. Sin embargo, la mayoría ha aceptado delimitarlo en nuestra definición actual de la línea de Kármán que se basa en la realidad física, 
+                      en el sentido de que marca aproximadamente la altitud a la que los aviones tradicionales ya no pueden volar con eficacia.
+                      Cualquier cosa que viaje por encima de este límite necesita un sistema de propulsión que no dependa de la sustentación generada por la atmósfera de la Tierra. 
+                      </p>
+                  </div>
                 </div>
                 <div class="col-md-4">
-                    <p> En otras palabras, la línea Kármán es donde cambian las leyes físicas que rigen la capacidad para volar de una nave. “Este es ciertamente un límite físico, donde termina la aerodinámica y comienza la astronáutica, 
-                    así que pensé, ¿por qué no debería ser también un límite jurisdiccional?... Debajo de esta línea, el espacio pertenece a cada país.
-                    Por encima de este nivel, habría espacio libre”, escribió en su autobiografía el propio von Kármán.
-                  </p>
+                  <div data-aos="zoom-in" data-aos-duration="1000">
+                      <p> En otras palabras, la línea Kármán es donde cambian las leyes físicas que rigen la capacidad para volar de una nave. “Este es ciertamente un límite físico, donde termina la aerodinámica y comienza la astronáutica, 
+                      así que pensé, ¿por qué no debería ser también un límite jurisdiccional?... Debajo de esta línea, el espacio pertenece a cada país.
+                      Por encima de este nivel, habría espacio libre”, escribió en su autobiografía el propio von Kármán.
+                      </p>
+                  </div>
                 </div>
             
                 <div class="col-md-4" >
@@ -241,9 +254,7 @@
 
     <script src="js/bootstrap.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-      </script>
+    <script> AOS.init(); </script>
       
 </body>
 </html>
